clang-ir/tests/snapshots/snapshot_fixtures__fixtures__goto_irreducible.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/goto_irreducible.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "choose_b", align 4
    %2 = alloca s32i, "x", align 4
    %3 = const 0 : s32i
    store %3, %0
    %4 = const 0 : s32i
    store %4, %1, align 4, volatile
    %5 = const 0 : s32i
    store %5, %2, align 4
    scope {
        %25 = load %1 : s32i, align 4, volatile
        %26 = cast(int_to_bool) %25 : bool
        if %26 {
            goto b
        }
        yield
    }
    br ^bb1
    ^bb1():
        label a:
        %6 = load %2 : s32i, align 4
        %7 = const 1 : s32i
        %8 = add %6, %7 : s32i [nsw]
        store %8, %2, align 4
        scope {
            %22 = load %2 : s32i, align 4
            %23 = const 3 : s32i
            %24 = cmp lt %22, %23 : bool
            if %24 {
                goto b
            }
            yield
        }
        goto done
    ^bb2():
        label b:
        %9 = load %2 : s32i, align 4
        %10 = const 2 : s32i
        %11 = add %9, %10 : s32i [nsw]
        store %11, %2, align 4
        scope {
            %19 = load %2 : s32i, align 4
            %20 = const 4 : s32i
            %21 = cmp lt %19, %20 : bool
            if %21 {
                goto a
            }
            yield
        }
        br ^bb3
    ^bb3():
        label done:
        %12 = get_global @printf : ((s8i*, ...) -> s32i)*
        %13 = get_global @.str : s8i[4]*
        %14 = cast(array_to_ptrdecay) %13 : s8i*
        %15 = load %2 : s32i, align 4
        %16 = call @printf(%14, %15) : s32i [all]
        %17 = const 0 : s32i
        store %17, %0
        %18 = load %0 : s32i
        return %18
}
