clang-ir/tests/snapshots/snapshot_fixtures__fixtures__goto_return_value.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/goto_return_value.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[10] = ConstArray { ty: Array { element_type: Named("s8i"), size: 10 }, elts: Str("%d %d %d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn classify(%arg0: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %14 = alloca s32i, "n", align 4
        %15 = alloca s32i, "__retval", align 4
        store %arg0, %14
        scope {
                %25 = load %14 : s32i, align 4
                %26 = const 0 : s32i
                cmp
                if %27 {
                        goto neg
                }
                yield
        }
        scope {
                %22 = load %14 : s32i, align 4
                %23 = const 0 : s32i
                cmp
                if %24 {
                        goto zero
                }
                yield
        }
        %16 = const 1 : s32i
        store %16, %15
        %17 = load %15 : s32i
        return %17
    ^bb1:
        label neg:
        %18 = const -1 : s32i
        store %18, %15
        %19 = load %15 : s32i
        return %19
    ^bb2:
        label zero:
        %20 = const 0 : s32i
        store %20, %15
        %21 = load %15 : s32i
        return %21
}
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = get_global @printf : (s8i*, ...) -> s32i*
        %3 = get_global @.str : s8i[10]*
        %4 = cast(array_to_ptrdecay) %3 : s8i*
        %5 = const -5 : s32i
        %6 = call @classify(%5) : s32i [all]
        %7 = const 0 : s32i
        %8 = call @classify(%7) : s32i [all]
        %9 = const 42 : s32i
        %10 = call @classify(%9) : s32i [all]
        %11 = call @printf(%4, %6, %8, %10) : s32i [all]
        %12 = const 0 : s32i
        store %12, %0
        %13 = load %0 : s32i
        return %13
}
