clang-ir/tests/snapshots/snapshot_fixtures__fixtures__heap_box_fixup.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/heap_box_fixup.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn malloc(%arg0: u64i) -> void* [external, c, nothrow];
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn free(%arg0: void*) -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i*, "p", align 8
        %2 = const 0 : s32i
        store %2, %0
        %3 = get_global @malloc : (u64i) -> void**
        %4 = const 4 : u64i
        %5 = call @malloc(%4) : void* [all]
        %6 = cast(bitcast) %5 : s32i*
        store %6, %1, align 8
        %7 = const 41 : s32i
        %8 = load %1 : s32i*, align 8
        store %7, %8, align 4
        %9 = load %1 : s32i*, align 8
        %10 = load %9 : s32i, align 4
        %11 = const 1 : s32i
        %12 = add %10, %11 : s32i [nsw]
        %13 = load %1 : s32i*, align 8
        store %12, %13, align 4
        %14 = get_global @printf : (s8i*, ...) -> s32i*
        %15 = get_global @.str : s8i[4]*
        %16 = cast(array_to_ptrdecay) %15 : s8i*
        %17 = load %1 : s32i*, align 8
        %18 = load %17 : s32i, align 4
        %19 = call @printf(%16, %18) : s32i [all]
        %20 = get_global @free : (void*) -> void*
        %21 = load %1 : s32i*, align 8
        %22 = cast(bitcast) %21 : void*
        call @free(%22) [all]
        %23 = const 0 : s32i
        store %23, %0
        %24 = load %0 : s32i
        return %24
}
